K8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres-container
        image: postgres
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: "100m"       
            memory: "128Mi"   
          limits:
            cpu: "250m"       
            memory: "256Mi"

---


apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
