K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    app.kubernetes.io/name: myingress
spec:
  rules:
  - host: java-app.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: java-service
            port: 
              number: 80
